# depi

./: *eshell*~  .Rbuildignore  .gitignore  COV.RData  DESCRIPTION  Data.csv  Data.txt  Data_Li_JUN.RData  Makefile  Makefile~  NAMESPACE  README.md  cleanup  config.status  configure  configure.ac  cov.txt  depi.Rproj  epi.Rproj  epistasisFn.r  file2file.R  main  main.cpp  main.cpp~  main_backup.cpp  main_in_gsl.c  main_in_gsl.cpp  main_in_gsl.cpp~  main_in_gsl.out  main_in_gsl_backup201706060521.cpp  main_in_gsl_int.cpp  main_in_gsl_v1.cpp  main_in_gsl_v2.cpp  mpout  out  res_gsl.txt  test.R  wholeData_Li_JUN.RData
R/: KinshipFN.r  RcppExports.R  ped2textFn.r  readPED_r.R
data/: Y.FA.txt
man/: Data.Rd  DetectEpi.Rd  X.PED.Rd  Y.FA.Rd  cov.Rd  eigenK.Rd  frlr.Rd  frlr1.Rd  frlr2.Rd
server/: res_gsl_00001.txt
src/: DetectEpi.cpp  Makevars  Makevars.in  Makevars.win  RcppExports.cpp  frlr.cpp  rcpp_hello.cpp  readPED  readPED.cpp  readPED_backup.cpp  safeGetline.cpp  safeGetline.h  test  test.cpp
v_rcpp/: README.md  main.cpp  main_r.cpp
